helm/home-k8s/kustomize/keycloak/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgresql-db
spec:
  selector:
    app: keycloak-postgresql-db
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
