helm/home-k8s/kustomize/keycloak/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.1.0/24
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - keycloak.andrewpjackson.com
      secretName: andrewpjackson.com-tls
  rules:
    - host: keycloak.andrewpjackson.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
